--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
