--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,8 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.0")
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
 }
